Elastic_Kubernetes_Service/Kubernetes_Network_Policies_on_Amazon_EKS/K8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: multi-tier-app
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
